@@ -9,6 +9,7 @@ sensord (0.6.39) unstable; urgency=low
   * Fixed coverity defects.
   * Improved sensorfw examples
   * Changed DbusEmitter to DataEmitter
+  * Changed emitToDbus to emitData
 
   [Timo Rongas]
   * Prevent reading values from empty list in SysfsAdaptor
